feat: CloudFrontおよびネームサーバー自動管理機能の一時無効化と新規スクリプトの追加
- CloudFront CNAMEレコードの存在チェックおよび自動クリーンアップ機能を一時的に無効化
- CloudFront CNAMEレコード作成用の新しいスクリプトを追加
- ネームサーバー更新機能を一時的に無効化
- 既存のスクリプトを環境変数から値を取得するように修正
- CloudFront関連の出力値を条件付きで設定するように変更

--- a/ansible/roles/wordpress/defaults/main.yml
+++ b/ansible/roles/wordpress/defaults/main.yml
@@ -41,4 +41,10 @@ wordpress_config_auto: false
 
 # SSL設定
 wordpress_force_ssl: false
-wordpress_ssl_admin: false 
+wordpress_ssl_admin: false
+
+# WordPress初期セットアップ設定
+wordpress_site_title: "{{ lookup('env', 'WORDPRESS_SITE_TITLE') | default('WordPress Site') }}"
+wordpress_admin_user: "{{ lookup('env', 'WORDPRESS_ADMIN_USER') | default('admin') }}"
+wordpress_admin_password: "{{ lookup('env', 'WORDPRESS_ADMIN_PASSWORD') | default('password') }}"
+wordpress_admin_email: "{{ lookup('env', 'WORDPRESS_ADMIN_EMAIL') | default('admin@example.com') }}" 
