--- a/ansible/templates/env.template
+++ b/ansible/templates/env.template
@@ -23,6 +23,12 @@ export WORDPRESS_DOMAIN="your-domain.com"
 export WORDPRESS_LOCALE="ja"
 export WORDPRESS_LANGUAGE="ja"
 
+# WordPress初期セットアップ設定
+export WORDPRESS_SITE_TITLE="Your Site Title"
+export WORDPRESS_ADMIN_USER="admin"
+export WORDPRESS_ADMIN_PASSWORD="your-secure-password"
+export WORDPRESS_ADMIN_EMAIL="admin@your-domain.com"
+
 # セキュリティ設定
 export WORDPRESS_DEBUG="false"
 export WORDPRESS_AUTOMATIC_UPDATER_DISABLED="true"
