feat: CloudFront設定ファイルの追加とWordPress環境の修正
- 新しいCloudFront設定ファイルを追加
- WordPress環境の設定をCloudFront経由に対応させるための修正を実施
- PHP-FPMの設定を有効化し、Apacheとの連携を強化
- Ansibleのプレイブックとテンプレートを更新し、環境変数を利用するように変更
- 不要なmod_php設定を無効化し、PHP-FPMを使用するように変更

--- a/ansible/playbooks/wordpress_setup.yml
+++ b/ansible/playbooks/wordpress_setup.yml
@@ -9,6 +9,7 @@
     wordpress_db_user: admin
     wordpress_db_password: "{{ lookup('env', 'WORDPRESS_DB_PASSWORD') | default('password') }}"
     wordpress_config_auto: true
+    wordpress_domain: "{{ lookup('env', 'WORDPRESS_DOMAIN') | default('example.com') }}"
     ssh_private_key: "{{ lookup('file', '/tmp/terraform_ssh_key') }}"
     ssh_public_key: "{{ lookup('file', '/tmp/terraform_ssh_key.pub') | default('') }}"
   
