--- a/wordpress.conf
+++ b/wordpress.conf
@@ -1,7 +1,7 @@
 # WordPress VirtualHost (HTTP Only - CloudFront handles HTTPS)
 <VirtualHost *:80>
-    ServerName {{ wordpress_domain | default('example.com') }}
-    ServerAlias {{ ansible_default_ipv4.address | default('localhost') }}
+    ServerName shamolife.com
+    ServerAlias ec2-54-64-49-220.ap-northeast-1.compute.amazonaws.com
     DocumentRoot /var/www/html
     
     <Directory /var/www/html>
@@ -9,16 +9,6 @@
         Require all granted
         Options Indexes FollowSymLinks
         DirectoryIndex index.php index.html
-        
-        # WordPress用のリライトルール
-        <IfModule mod_rewrite.c>
-            RewriteEngine On
-            RewriteBase /
-            RewriteRule ^index\.php$ - [L]
-            RewriteCond %{REQUEST_FILENAME} !-f
-            RewriteCond %{REQUEST_FILENAME} !-d
-            RewriteRule . /index.php [L]
-        </IfModule>
     </Directory>
     
     # CloudFront用のヘッダー処理
@@ -32,12 +22,12 @@
         Header always set X-Frame-Options SAMEORIGIN
         Header always set X-XSS-Protection "1; mode=block"
         Header always set Referrer-Policy "strict-origin-when-cross-origin"
+        Header always set Strict-Transport-Security "max-age=63072000; includeSubDomains; preload"
         Header always set Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://cdn.jsdelivr.net https://cdnjs.cloudflare.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://cdn.jsdelivr.net https://cdnjs.cloudflare.com; font-src 'self' https://fonts.gstatic.com https://cdn.jsdelivr.net https://cdnjs.cloudflare.com; img-src 'self' data: https:; connect-src 'self' https:; frame-src 'self'; object-src 'none';"
         Header always set Permissions-Policy "geolocation=(), microphone=(), camera=()"
-        Header always set Strict-Transport-Security "max-age=63072000; includeSubDomains; preload"
     </IfModule>
     
     # ログ設定
     ErrorLog logs/wordpress_error.log
     CustomLog logs/wordpress_access.log combined
-</VirtualHost> 
+</VirtualHost>
