feat: Ansible設定ファイルとWordPress環境の強化
- Ansibleの設定ファイルを新規作成し、インベントリやSSH接続設定を追加
- .htaccessファイルを更新し、CloudFront経由のHTTPSリダイレクトを強化
- WordPressの設定ファイルに管理画面用のURL設定を追加
- Ansibleプレイブックを修正し、WordPressのデータベースユーザー作成タスクを追加
- Apacheの設定を更新し、管理画面へのHTTPSアクセスをサポート
- SSH鍵の管理方法を改善し、環境変数を利用するように変更

--- a/ansible/playbooks/wordpress_setup.yml
+++ b/ansible/playbooks/wordpress_setup.yml
@@ -14,8 +14,8 @@
     wordpress_domain: "{{ lookup('env', 'WORDPRESS_DOMAIN') | default('example.com') }}"
     
     # SSH設定
-    ssh_private_key: "{{ lookup('file', '/tmp/terraform_ssh_key') }}"
-    ssh_public_key: "{{ lookup('file', '/tmp/terraform_ssh_key.pub') | default('') }}"
+    ssh_private_key: "{{ lookup('env', 'SSH_PRIVATE_KEY_PATH') | default('/tmp/wp-sample-key.pem') }}"
+    ssh_public_key: "{{ lookup('env', 'SSH_PUBLIC_KEY_PATH') | default('/tmp/wp-sample-key.pub') }}"
     
     # PHP-FPM設定
     php_fpm_enabled: true
@@ -39,7 +39,7 @@
   hosts: all
   become: yes
   vars:
-    ssh_private_key: "{{ lookup('file', '/tmp/terraform_ssh_key') }}"
-    ssh_public_key: "{{ lookup('file', '/tmp/terraform_ssh_key.pub') | default('') }}"
+    ssh_private_key: "{{ lookup('env', 'SSH_PRIVATE_KEY_PATH') | default('/tmp/wp-sample-key.pem') }}"
+    ssh_public_key: "{{ lookup('env', 'SSH_PUBLIC_KEY_PATH') | default('/tmp/wp-sample-key.pub') }}"
   roles:
     - ssh 
