--- a/ansible/roles/ssh/tasks/main.yml
+++ b/ansible/roles/ssh/tasks/main.yml
@@ -15,39 +15,35 @@
 - name: Save SSH private key
   copy:
     content: "{{ ssh_private_key }}"
-    dest: /tmp/terraform_ssh_key
+    dest: "{{ ssh_key_file_path | default('/tmp/ssh_key.pem') }}"
     mode: '0600'
     owner: root
     group: root
   when: ssh_private_key is defined
 
-- name: Generate SSH public key from private key
-  shell: ssh-keygen -y -f /tmp/terraform_ssh_key > /tmp/terraform_ssh_key.pub
-  args:
-    creates: /tmp/terraform_ssh_key.pub
-  when: ssh_private_key is defined
 
-- name: Create .ssh directory for ec2-user
+
+- name: Create .ssh directory for {{ ssh_user }}
   file:
-    path: /home/ec2-user/.ssh
+    path: /home/{{ ssh_user }}/.ssh
     state: directory
     mode: '0700'
-    owner: ec2-user
-    group: ec2-user
+    owner: "{{ ssh_user }}"
+    group: "{{ ssh_user }}"
 
-- name: Set authorized_keys for ec2-user
+- name: Set authorized_keys for {{ ssh_user }}
   authorized_key:
-    user: ec2-user
+    user: "{{ ssh_user }}"
     state: present
-    key: "{{ ssh_public_key }}"
+    key: "{{ lookup('file', ssh_public_key) }}"
     manage_dir: no
 
 - name: Ensure correct permissions on authorized_keys
   file:
-    path: /home/ec2-user/.ssh/authorized_keys
+    path: /home/{{ ssh_user }}/.ssh/authorized_keys
     mode: '0600'
-    owner: ec2-user
-    group: ec2-user
+    owner: "{{ ssh_user }}"
+    group: "{{ ssh_user }}"
 
 - name: Configure SSH daemon settings
   lineinfile:
@@ -56,9 +52,9 @@
     line: "{{ item.line }}"
     state: present
   loop:
-    - { regexp: '^#?PubkeyAuthentication', line: 'PubkeyAuthentication yes' }
+    - { regexp: '^#?PubkeyAuthentication', line: 'PubkeyAuthentication {{ "yes" if ssh_pubkey_authentication else "no" }}' }
     - { regexp: '^#?AuthorizedKeysFile', line: 'AuthorizedKeysFile .ssh/authorized_keys' }
-    - { regexp: '^#?PasswordAuthentication', line: 'PasswordAuthentication no' }
+    - { regexp: '^#?PasswordAuthentication', line: 'PasswordAuthentication {{ "yes" if ssh_password_authentication else "no" }}' }
   notify: restart sshd
 
 - name: Test SSH configuration
