feat: WordPressデータベースユーザーの変更と設定の修正
- WordPressのデータベースユーザーを「wordpress」から「admin」に変更
- Ansibleの設定ファイルを更新し、データベース接続情報を統一
- 不要なデータベースユーザー作成タスクを削除し、クエリを修正

--- a/ansible/roles/wordpress/tasks/database_setup.yml
+++ b/ansible/roles/wordpress/tasks/database_setup.yml
@@ -36,7 +36,7 @@
     login_port: "{{ (wp_db_host | regex_replace('.*:', '') | default('3306')) | int }}"
     login_user: "{{ wp_db_user }}"
     login_password: "{{ wp_db_password }}"
-    query: "UPDATE {{ wp_table_prefix }}options SET option_value = 'https://admin.{{ wordpress_domain | default('example.com') }}' WHERE option_name = 'siteurl';"
+    query: "UPDATE {{ wp_table_prefix }}options SET option_value = 'https://{{ wordpress_domain | default('example.com') }}' WHERE option_name = 'siteurl';"
   become: yes
   when: 
     - wp_db_name is defined 
