--- a/ansible/playbooks/wordpress_setup.yml
+++ b/ansible/playbooks/wordpress_setup.yml
@@ -7,7 +7,7 @@
     # データベース設定
     wp_db_host: "{{ lookup('env', 'WORDPRESS_DB_HOST') | default('localhost') }}"
     wp_db_name: wordpress
-    wp_db_user: wordpress
+    wp_db_user: admin
     wp_db_password: "{{ lookup('env', 'WORDPRESS_DB_PASSWORD') | default('password') }}"
     
     # WordPress設定
