--- a/ansible/roles/database/defaults/main.yml
+++ b/ansible/roles/database/defaults/main.yml
@@ -1,7 +1,7 @@
 ---
 # データベースロールのデフォルト変数
 wordpress_db_host: "{{ lookup('env', 'WORDPRESS_DB_HOST') | default('localhost') }}"
-wordpress_db_user: "{{ lookup('env', 'WORDPRESS_DB_USER') | default('wordpress', true) }}"
+wordpress_db_user: "{{ lookup('env', 'WORDPRESS_DB_USER') | default('admin', true) }}"
 wordpress_db_password: "{{ lookup('env', 'WORDPRESS_DB_PASSWORD') | default('password', true) }}"
 wordpress_db_name: "{{ lookup('env', 'WORDPRESS_DB_NAME') | default('wordpress') }}"
 wordpress_db_charset: "{{ lookup('env', 'WORDPRESS_DB_CHARSET') | default('utf8mb4') }}"
