--- a/ansible/roles/wordpress/defaults/main.yml
+++ b/ansible/roles/wordpress/defaults/main.yml
@@ -3,7 +3,7 @@
 
 # データベース設定
 wp_db_name: "wordpress"
-wp_db_user: "wordpress"
+wp_db_user: "admin"
 wp_db_password: "password"
 wp_db_host: "localhost"
 
