feat: CloudFront機能の無効化と関連ファイルの削除
- CloudFront関連の設定やリソースを無効化し、関連ファイルを削除
- CloudFront IPアドレスリストやセキュリティグループ設定を削除
- AnsibleプレイブックやTerraform設定を更新し、CloudFront機能を無効化
- Let's EncryptによるSSL/TLS証明書管理を追加し、設定を強化

--- a/.github/workflows/setup-deployment.yml
+++ b/.github/workflows/setup-deployment.yml
@@ -167,7 +167,7 @@ jobs:
         $([ -n "${{ github.event.inputs.registrant_phone }}" ] && echo "registrant_phone = \"${{ github.event.inputs.registrant_phone }}\"")
         
         # Database configuration
-        db_password = "breadhouse"
+        db_password = "${{ secrets.DB_PASSWORD || 'your-secure-password-here' }}"
         
         # Instance configuration
         instance_type = "t2.micro"
