feat: WordPress管理画面のアクセス制御とSSL設定の強化
- Let's Encryptを使用して管理画面用のSSL証明書を設定
- Apacheの設定を更新し、管理画面へのHTTPからHTTPSへのリダイレクトを追加
- wp-adminへのアクセス制御を強化し、特定のサブドメインからのアクセスのみを許可
- .htaccessファイルを新規作成し、管理画面へのアクセス制御を実装

--- a/ansible/playbooks/lets_encrypt_setup.yml
+++ b/ansible/playbooks/lets_encrypt_setup.yml
@@ -139,6 +139,7 @@
         --non-interactive
         -d {{ domain_name }}
         -d www.{{ domain_name }}
+        -d admin.{{ domain_name }}
       when: lets_encrypt_staging
       register: certbot_staging_result
       failed_when: 
@@ -157,6 +158,7 @@
         --non-interactive
         -d {{ domain_name }}
         -d www.{{ domain_name }}
+        -d admin.{{ domain_name }}
       when: not lets_encrypt_staging
       register: certbot_production_result
       failed_when: 
