feat: WordPress設定の強化と新規ファイルの追加
- .htaccessファイルを新規作成し、WordPress用の基本設定を追加
- Apache設定を更新し、htaccessファイルのMD5ハッシュを参照
- PHP設定ファイルを新規作成し、WordPress特有の設定を追加
- WordPressの設定ファイルを修正し、サブドメインによるURL設定を強化
- アクセス制御やファイル権限設定を改善し、セキュリティを向上

--- a/ansible/roles/php/tasks/main.yml
+++ b/ansible/roles/php/tasks/main.yml
@@ -36,4 +36,12 @@
     name: php-fpm
     state: started
     enabled: yes
-  become: yes 
+  become: yes
+
+- name: Configure WordPress-specific PHP settings
+  template:
+    src: wordpress.ini.j2
+    dest: /etc/php.d/wordpress.ini
+    mode: '0644'
+  become: yes
+  notify: restart apache 
