--- a/ansible/roles/wordpress/defaults/main.yml
+++ b/ansible/roles/wordpress/defaults/main.yml
@@ -31,6 +31,11 @@ wp_post_revisions: 5
 wp_autosave_interval: 300
 wp_empty_trash_days: 30
 
+# ファイル権限設定
+wp_htaccess_mode: "0664"
+wp_htaccess_owner: "apache"
+wp_htaccess_group: "apache"
+
 # 認証キー（本番環境では必ず変更してください）
 wp_auth_key: "put your unique phrase here"
 wp_secure_auth_key: "put your unique phrase here"
