feat: Terraformとの連携強化と設定ファイルの更新
- Ansible設定ファイルを更新し、Terraformの出力と設定を自動的に取得する機能を追加
- SSH接続設定を改善し、デフォルト値を設定
- WordPress設定をTerraformの値を優先するように修正
- 不要なファイルを削除し、関連する設定を整理
- 新規にTerraform連携ガイドを作成し、使用方法を明記

--- a/.github/workflows/terraform-config.yml
+++ b/.github/workflows/terraform-config.yml
@@ -190,8 +190,8 @@ jobs:
       - name: Generate deployment_config.json
         run: |
           # 環境変数の設定
-          export PROJECT="${{ github.event.inputs.project_name || 'wp-shamo' }}"
-          export DOMAIN_NAME="${{ github.event.inputs.domain_name || 'shamolife.com' }}"
+          export PROJECT="${{ github.event.inputs.project_name || 'wp-example' }}"
+          export DOMAIN_NAME="${{ github.event.inputs.domain_name || 'example.com' }}"
           export AWS_REGION="${{ github.event.inputs.aws_region || 'ap-northeast-1' }}"
           
           # 設定ファイルのテンプレートから生成（変数置換付き）
