--- a/ansible.cfg
+++ b/ansible.cfg
@@ -3,7 +3,7 @@ inventory = ansible/inventory/hosts.yml
 roles_path = ansible/roles
 host_key_checking = False
 remote_user = ec2-user
-private_key_file = /tmp/wp-shamo-key.pem
+private_key_file = ~/.ssh/ssh_key
 
 [ssh_connection]
 ssh_args = -o ControlMaster=auto -o ControlPersist=60s -o UserKnownHostsFile=/dev/null -o IdentitiesOnly=yes
