--- a/ansible/inventory/hosts.yml
+++ b/ansible/inventory/hosts.yml
@@ -5,7 +5,7 @@ all:
         wordpress_ec2:
           ansible_host: 54.64.49.220
           ansible_user: ec2-user
-          ansible_ssh_private_key_file: "{{ lookup('env', 'SSH_PRIVATE_KEY_FILE') | default('~/.ssh/ssh_key') }}"
+          ansible_ssh_private_key_file: ~/.ssh/ssh_key
           ansible_ssh_common_args: -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null
           ansible_ssh_extra_args: -o ConnectTimeout=30
           rds_endpoint: wp-shamo-rds.cjg0emy2snss.ap-northeast-1.rds.amazonaws.com:3306
@@ -14,6 +14,6 @@ all:
         nat_ec2:
           ansible_host: 54.64.109.28
           ansible_user: ec2-user
-          ansible_ssh_private_key_file: "{{ lookup('env', 'SSH_PRIVATE_KEY_FILE') | default('~/.ssh/ssh_key') }}"
+          ansible_ssh_private_key_file: ~/.ssh/ssh_key
           ansible_ssh_common_args: -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null
           ansible_ssh_extra_args: -o ConnectTimeout=30
